--- a/lib/mongo_backer/templates/config.tt
+++ b/lib/mongo_backer/templates/config.tt
@@ -1,7 +1,7 @@
 mongo:
-  host: <%= @config.host %>
-  port: <%= @config.port %>
+  host: <%= @host %>
+  port: <%= @port %>
 
 s3:
-  access_key_id: <%= @config.access_key_id %>
-  secret_access_key: <%= @config.secret_access_key %>
+  access_key_id: <%= @access_key_id %>
+  secret_access_key: <%= @secret_access_key %>
